--- a/index.html
+++ b/index.html
@@ -1,14 +1,87 @@
 <!DOCTYPE html>
-<html>
-  <head>
-
-    <script src="scrpit.js"></script>
-  </head>
-  <body>
-   
-      <p>hii</p>
-
-      
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>AutoWorld - Automobiles Website</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        body { font-family: Arial, sans-serif; margin: 0; background: #f4f4f4; }
+        header { background: #222; color: #fff; padding: 20px 0; text-align: center; }
+        nav { background: #444; padding: 10px 0; }
+        nav a { color: #fff; margin: 0 15px; text-decoration: none; font-weight: bold; }
+        .container { max-width: 1100px; margin: 30px auto; background: #fff; padding: 30px; border-radius: 8px; }
+        h2 { color: #222; }
+        .cars { display: flex; flex-wrap: wrap; gap: 24px; }
+        .car-card {
+            background: #f9f9f9;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            width: 300px;
+            padding: 16px;
+            box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+        }
+        .car-card img { width: 100%; border-radius: 6px; }
+        .car-card h3 { margin: 12px 0 8px; }
+        .car-card p { margin: 0 0 8px; }
+        footer { background: #222; color: #fff; text-align: center; padding: 16px 0; margin-top: 40px; }
+        @media (max-width: 900px) {
+            .cars { flex-direction: column; align-items: center; }
+            .car-card { width: 90%; }
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>AutoWorld</h1>
+        <p>Your Destination for the Latest Automobiles</p>
+    </header>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#models">Models</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+    </nav>
+    <div class="container" id="home">
+        <h2>Welcome to AutoWorld</h2>
+        <p>Discover the latest cars, SUVs, and electric vehicles from top brands. Explore features, compare models, and find your perfect ride!</p>
     </div>
-  </body>
+    <div class="container" id="models">
+        <h2>Featured Models</h2>
+        <div class="cars">
+            <div class="car-card">
+                <img src="https://images.unsplash.com/photo-1503736334956-4c8f8e92946d?auto=format&fit=crop&w=400&q=80" alt="Sedan">
+                <h3>2024 Speedster Sedan</h3>
+                <p>Engine: 2.0L Turbo</p>
+                <p>Fuel Efficiency: 30 MPG</p>
+                <p>Price: $25,000</p>
+            </div>
+            <div class="car-card">
+                <img src="https://images.unsplash.com/photo-1511918984145-48de785d4c4e?auto=format&fit=crop&w=400&q=80" alt="SUV">
+                <h3>2024 Mountain SUV</h3>
+                <p>Engine: 3.5L V6</p>
+                <p>Fuel Efficiency: 22 MPG</p>
+                <p>Price: $35,000</p>
+            </div>
+            <div class="car-card">
+                <img src="https://images.unsplash.com/photo-1461632830798-3adb3034e4c8?auto=format&fit=crop&w=400&q=80" alt="Electric Car">
+                <h3>2024 EcoDrive EV</h3>
+                <p>Range: 320 miles</p>
+                <p>Charging: 80% in 40 min</p>
+                <p>Price: $40,000</p>
+            </div>
+        </div>
+    </div>
+    <div class="container" id="about">
+        <h2>About Us</h2>
+        <p>AutoWorld is dedicated to providing the latest information on automobiles. We showcase new models, compare features, and help you make informed decisions for your next vehicle purchase.</p>
+    </div>
+    <div class="container" id="contact">
+        <h2>Contact</h2>
+        <p>Email: info@autoworld.com</p>
+        <p>Phone: +1 (555) 123-4567</p>
+    </div>
+    <footer>
+        &copy; 2024 AutoWorld. All rights reserved.
+    </footer>
+</body>
 </html>
